# api/app.js
@@ -1,6 +1,13 @@
+require('dotenv').config();
+const mongoose = require('mongoose');
 var express = require('express');
 var cookieParser = require('cookie-parser');
 var logger = require('morgan');
+
+mongoose.connect(process.env.MONGODB_URL);
+
+const routerApidocs = require('./routes/router_apidocs');
+const routerFazendas = require('./routes/router_Fazendas');
 
 var app = express();
 
@@ -8,5 +15,11 @@ app.use(logger('dev'));
 app.use(express.json());
 app.use(express.urlencoded({ extended: false }));
 app.use(cookieParser());
+
+app.use('/users', usersRouter);
+app.use('/api-docs', routerApidocs);
+app.use('/fazendas', routerFazendas);
+
+module.exports = app;
 
 module.exports = app;
