# api/swagger.yaml
@@ -1,9 +1,123 @@
-#estrutura minima 
-
 openapi: 3.0.0
-info: 
-  title: API Loja Virtual
-  version: 0.0.1
-tags: 
+info:
+  title: API Hitorico de Fazendas
+  version: 0.1
+tags:
+  - fazendas
 paths:
+  /fazendas:
+    get:
+      tags:
+        - fazendas
+      responses:
+        200:
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/ArrayOfFazendas'
+      security:
+        - JWTAuth: []
+    post:
+      tags:
+        - fazendas
+      requestBody:
+        content:
+          application/json:
+            schema:
+              $ref: '#/components/schemas/Fazenda'
+      responses:
+        201:
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/Fazenda'
+        422:
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/Mensagem'
+  /fazendas/{id}:
+    get:
+      tags:
+        - fazendas
+      parameters:
+        - in: path
+          type: string
+          name: id
+      responses:
+        200:
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/Fazenda'
+        404:
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/Mensagem'
+        422:
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/Mensagem'
+    put:
+      tags:
+        - fazendas
+      parameters:
+        - in: path
+          type: string
+          name: id
+      requestBody:
+        content:
+          application/json:
+            schema:
+              $ref: '#/components/schemas/Fazenda'
+      responses:
+        200:
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/Fazenda'
+        404:
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/Mensagem'
+    delete:
+      tags:
+        - fazendas
+      parameters:
+        - in: path
+          type: string
+          name: id
+      responses:
+        204:
+          content:
+        404:
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/Mensagem'
 components:
+  schemas:
+    ArrayOfFazendas:
+      type: array
+      items:
+        $ref: '#/components/schemas/Fazenda'
+    Fazenda:
+      type: object
+      properties:
+        nome:
+          type: string
+        calculo:
+          type: number
+    Mensagem:
+      type: object
+      properties:
+        msg:
+          type: string
+  securitySchemes: 
+    JWTAuth:
+      type: apiKey
+      in: header
+      name: Authorization
